<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/removeall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
		android:drawableTop="@drawable/ic_action_remove"
		android:orderInCategory="0"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="8sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/action_favorits"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/removetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/removeall"
        android:layout_centerHorizontal="true"
        android:text="@string/removetxt"
        android:textColor="#ffffff"
        android:textSize="8sp" />

</RelativeLayout>