<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/title_activity_routs"
         android:textColor="#ffffff"
         android:textSize="18sp" />

     <Button
         android:id="@+id/action_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="?android:attr/selectableItemBackground"
         android:drawableTop="@drawable/ic_action_add_to_queue"
         android:orderInCategory="0"
         android:text="@string/add"
         android:textColor="@color/white"
         android:textSize="8sp" />

     <Button
         android:id="@+id/action_back_to_plane"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="?android:attr/selectableItemBackground"
         android:drawableTop="@drawable/ic_action_back"
         android:orderInCategory="0"
         android:text="@string/action_back"
         android:textColor="@color/white"
         android:textSize="8sp" />

</RelativeLayout>