<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/customborder"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutMenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        tools:ignore="RtlHardcoded" >

        <Button
            android:id="@+id/action_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_action_map"
            android:onClick="mapClicked"
            android:orderInCategory="0"
            android:src="@drawable/ic_action_map"
            android:text="@string/action_map"
            android:textColor="@color/black"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/action_plane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_action_split"
            android:onClick="routesClicked"
            android:orderInCategory="0"
            android:src="@drawable/ic_action_split"
            android:text="@string/action_plane"
            android:textColor="@color/black"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/action_favorits2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_action_favorite"
            android:onClick="favoritesClicked"
            android:orderInCategory="0"
            android:src="@drawable/ic_action_favorite"
            android:text="@string/action_favorits"
            android:textColor="@color/black"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/action_help2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/myblue"
            android:drawableTop="@drawable/ic_action_help"
            android:orderInCategory="0"
            android:src="@drawable/ic_action_help"
            android:text="@string/action_help"
            android:textColor="@color/black"
            android:textSize="8sp"
            tools:ignore="ButtonStyle,SmallSp" />

        <Button
            android:id="@+id/action_settings2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_action_settings"
            android:src="@drawable/ic_action_settings"
            android:text="@string/action_settings"
            android:textColor="@color/black"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayoutMenu"
        android:layout_alignParentLeft="true"
        android:background="@color/gray"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded" >
        
        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>