<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.finalproject.FavoriteDetailsActivity" >

    <ListView
        android:id="@+id/listViewAddresses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewEnd"
        android:layout_alignLeft="@+id/textViewStart"
        android:layout_below="@+id/textViewAddresses" >

    </ListView>

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/startnavfav"
        android:background="@color/blue"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold|italic"  />

    <TextView
        android:id="@+id/textViewEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonStart"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_toLeftOf="@+id/textViewEndTitle"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewEnd"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textViewEndTitle"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewAddresses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listViewAddresses"
        android:layout_alignRight="@+id/listViewAddresses"
        android:layout_below="@+id/textViewStart"
        android:text="@string/intermediate"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewEndTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewEnd"
        android:layout_alignRight="@+id/buttonStart"
        android:text="@string/endTitle"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewStartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewStart"
        android:layout_alignBottom="@+id/textViewStart"
        android:layout_alignRight="@+id/textViewAddresses"
        android:text="@string/startTitle" 
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic"/>

</RelativeLayout>
